--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+beautifulsoup4==4.9.0
+billiard==3.6.3.0
+bs4==0.0.1
+certifi==2020.4.5.1
+chardet==3.0.4
+coala-utils==0.5.1
+idna==2.9
+lxml==4.5.0
 numpy==1.18.2
+requests==2.23.0
+soupsieve==2.0
+twitterscraper==1.4.0
+urllib3==1.25.8
